Style create mp3 button. Increase audio player width. Fix vertical alignment in appbars. Add applicatino title in main Appbar

--- a/src/assets/sass/components/_Appbar.sass
+++ b/src/assets/sass/components/_Appbar.sass
@@ -2,6 +2,11 @@
   position: fixed !important
   width: 100%
   top: 0
-  h4
-    margin-top: 5px
-    margin-bottom: 0px
+  align-items: center
+  h1
+    flex: 0 1 auto !important
+    margin-right: 2em !important
+
+  > *
+    margin-top: 0 !important
+    margin-botttom: 0 !important
