--- a/src/assets/sass/components/_SearchInput.sass
+++ b/src/assets/sass/components/_SearchInput.sass
@@ -2,11 +2,11 @@
   display: flex
   flex-wrap: wrap
   width: 100%
+  height: 48px !important
   margin-right: auto
   margin-left: 10px
   background-color: #fff
   font-size: 20px
-  margin-top: 5px
   &-TextField
     flex: 1 1 auto
     input
